manifests/argocd/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: k8s-apps
    alb.ingress.kubernetes.io/healthcheck-path: /argocd/healthz
    alb.ingress.kubernetes.io/security-groups: sg-08f123e1efc82067c 
    

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
